--- a/.github/workflows/master_regreenhouse.yml
+++ b/.github/workflows/master_regreenhouse.yml
@@ -24,8 +24,9 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build api-gateway
+          npm run build iam
+          npm run build personas
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
